fix(insights): fix feed component drawer stretching on large screens

--- a/apps/insights/src/components/PriceComponentDrawer/index.module.scss
+++ b/apps/insights/src/components/PriceComponentDrawer/index.module.scss
@@ -1,6 +1,11 @@
 @use "@pythnetwork/component-library/theme";
 
 .priceComponentDrawer {
+  .priceComponentDrawerBody {
+    grid-template-rows: max-content max-content;
+    grid-template-columns: 100%;
+  }
+
   .badges {
     @include theme.breakpoint("lg") {
       display: none;
